2007-01-20  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Fixes bug #30488
	* native/jni/native-lib/cpnet.c(SOCKET_NOSIGNAL): Deleted,
	(setsockopt_NOSIGPIPE): New function,
	(cpnet_send): Corrected the option setting to send(),
	(cpnet_sendTo): Corrected the option setting to sendto(). 

2007-01-19  Marco Trudel  <mtrudel@gmx.ch>

	* java/util/Arrays.java (binarySearch): Change comparison order.

2007-01-17  Keith Seitz  <keiths@redhat.com>

	* gnu/classpath/jdwp/events/filters/StepFilter.java:
	Update javadoc. 
	(matches): Implement.

	* gnu/classpath/jdwp/event/EventManager.java (EventManager): Honor
	agent startup suspension for VM_INIT.

2007-01-17  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/javah/PathOptionGroup.java
	(PathOptionGroup): Set default boot class path.

2007-01-17  Mark Wielaard  <mark@klomp.org>

	* javax/activity/ActivityCompletedException.java: Make constructors
	public.
	* javax/activity/ActivityRequiredException.java: Likewise.
	* javax/activity/InvalidActivityException.java: Likewise.

2007-01-17  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicRadioButtonUI.java
	(paint): Use helper method to figure out icon. Don't override
	the icon field in that class. Check for null icons.
	(getCurrentIcon): New helper function to determine icon to be
	painted.

2007-01-17  Mark Wielaard  <mark@klomp.org>

	* javax/activity/ActivityCompletedException.java: New file.
	* javax/activity/ActivityRequiredException.java: Likewise.
	* javax/activity/InvalidActivityException.java: Likewise.
	* javax/activity/package.html: Likewise.

2007-01-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/DefaultLoaderRepository.java:
	(loadClass(String)): Made static.
	(loadClassWithout(String,ClassLoader)): Likewise.

2007-01-15  Kyle Galloway  <kgallowa@redhat.com>

	* gnu/classpath/jdwp/exception/TypeMismatchException.java: New file.
	* gnu/classpath/jdwp/exception/InvalidFrameException.java: Fix indentation.